# calhacks-slack-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  deps.py  embeddings.py  logging.py  main.py  supa.py
app/domain/: policy.py  schemas.py
app/routers/: health.py  memory.py  slack.py
tests/: conftest.py  test_memory.py  test_slack.py
