[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slackagent"
version = "0.1.0"
description = "Slack Q&A FastAPI microservice"
authors = [{ name = "Slack Agent", email = "ops@example.com" }]
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
